--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
         Formulário de cadastro
     </h1>
     <form>
-        <label id="nome">Nome</label>
-        <input name="nome"> <br />
-        <label id="email">E-mail</label>
-        <input name="email"> <br />
-        <label id="senha">Senha</label>
-        <input name="senha"> <br />
-        <button>Cadastrar</button>
+        <label for="nome">Nome</label>
+        <input id="nome" type="text"> <br />
+        <label for="email">Email</label>
+        <input id="email" type="email"> <br />
+        <label for="senha">Senha</label>
+        <input id="senha" type="passowrd"> <br />
+        <button type="submit">Cadastrar</button>
     </form>
 </body>
 </html>
